# GeneticATSPSolver

./: CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  MatrixATSP.cpp  MatrixATSP.h  Menu.cpp  Menu.h  PerformanceTest.cpp  PerformanceTest.h  main.cpp
test_matrices/: ftv170.atsp  ftv47.txt
